--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "gh-pages": "^2.0.1",
     "pug-lint": "^2.6.0",
-    "stylelint": "^13.1.0",
+    "stylelint": "^13.6.1",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
@@ -49,6 +49,7 @@
     "resolve-url-loader": "^3.1.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.42.1"
+    "webpack": "^4.42.1",
+    "dot-prop": ">=5.1.1"
   }
 }
